data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2407.wast
;; 8. **Mutually Exclusive Conditional Branches**:    - Formulate a block with conditional branches (`br_if`) leading to mutually exclusive paths and verify if the stack states and CFG are correctly maintained.    - This evaluates how CFG handles conditional branching and exclusive code paths.

(assert_invalid
  (module
    (func $conditional-block (result i32)
      (i32.const 1)
      (block (result i32)
        (i32.const 0)
        (br_if 0 (i32.const 1))
        (return (i32.const 1))
      )
    )
  )
  "type mismatch"
)